# unrust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish-release.yml
pkg/codegen/: Cargo.toml  codegen.rs
pkg/inbuilt/: Cargo.toml  entity.rs  guid.rs  inbuilt.rs  parent.rs  transform.rs
pkg/unrust/: Cargo.toml  build.rs  loader.rs  logger.rs  unity.rs  unrust.rs
pkg/unrust-proc-macro/: Cargo.toml  macro.rs
unity/example/Assets/: URPAsset.asset  URPAsset_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
unity/example/Assets/Materials/: Child.mat  Cube.mat  Plane.mat
unity/example/Assets/Prefabs/: Cube.prefab
unity/example/Assets/Resources/: cube.spawn.toml
unity/example/Assets/Scenes/: HelloCube.unity  HelloCubeEnableable.unity  HelloCubeParenting.unity  HelloCubePrefabs.unity
unity/example/Assets/Scenes/ECS/: ECS_HelloCube.unity  ECS_HelloCubeEnableable.unity  ECS_HelloCubeParenting.unity  ECS_HelloCubePrefabs.unity
unity/example/Assets/Scenes/HelloCube/ECS/: ECS_HelloCube.unity
unity/example/Assets/Settings/: High_PipelineAsset.asset  High_PipelineAsset_ForwardRenderer.asset  Low_PipelineAsset.asset  Low_PipelineAsset_ForwardRenderer.asset  Medium_PipelineAsset.asset  Medium_PipelineAsset_ForwardRenderer.asset  Very High_PipelineAsset.asset  Very High_PipelineAsset_ForwardRenderer.asset  Very Low_PipelineAsset.asset  Very Low_PipelineAsset_ForwardRenderer.asset
unity/example/Assets/unrust/: BoidAuthoring.cs  BoidPrefabsAuthoring.cs  CubePrefabsAuthoring.cs  DoRotateAuthoring.cs  GameStateAuthoring.cs  SampleComponentAuthoring.cs  UnrustComponent.cs  UnrustHooks.cs  UnrustState.cs  unrustGameSettings.asset
unity/example/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
unity/example/game/: Cargo.toml
unity/example/game/src/: hello_cube_enableable.rs  hello_cube_parenting.rs  hello_cube_prefab.rs  hello_cube_simple.rs  lib.rs  types.rs
unity/sdk/: package.json
unity/sdk/Editor/: Build.cs  UnrustEditor.asmdef
unity/sdk/Runtime/: InbuiltGenerated.cs  UnrustAuthoring.cs  UnrustBaker.cs  UnrustLoader.cs  UnrustNative.cs  UnrustPrefabs.cs  UnrustRuntime.asmdef  UnrustSettings.cs  UnrustSystem.cs
unity/sdk/template~/: Cargo.toml.template  UnrustGame.asmdef  build.rs.template
unity/sdk/template~/src/: lib.rs.template
