[workspace]

[package]
name = "game"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1"
unrust = { path = "../../../pkg/unrust" }

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unrust = { path = "../../../pkg/unrust" }
tracing = "0.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
bevy_common_assets = { version = "0.7.0", features = ["toml"] }

[patch.crates-io]
genco = { git = "https://github.com/udoprog/genco", branch = "proc-macro2-fork" }
proc-macro2 = { git = "https://github.com/udoprog/proc-macro2", branch = "span-locations" }